# affini

./: .gitignore  CLAUDE.md  affini.toml  package-lock.json  package.json
.github/workflows/: ci.yml
core/: Cargo.toml
core/crates/affini-cli/: Cargo.toml
core/crates/affini-cli/src/: ai.rs  main.rs
core/crates/affini-core/: Cargo.toml
core/crates/affini-core/src/: callgraph.rs  diff.rs  dupes.rs  flows.rs  funcs.rs  graph.rs  intent.rs  lib.rs  model.rs  parse.rs  resolve.rs  rollup.rs  snapshot.rs  typeshape.rs
ui/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  api.ts  index.css  metricHelp.ts
ui/src/components/: InfoTip.tsx  RootPicker.tsx
ui/src/views/: DiffView.tsx  DupesView.tsx  FlowsView.tsx  GraphView.tsx  ScorecardView.tsx  TrendsView.tsx
ui/src/views/flows/: FlowGraph.tsx  FlowTimeline.tsx  StepContractPanel.tsx  TypeShapeView.tsx  flowLayout.test.ts  flowLayout.ts
ui/src/views/graph/: ForceGraph.tsx  ModuleNode.tsx  dagreLayout.test.ts  dagreLayout.ts  edgePath.test.ts  edgePath.ts  layers.test.ts  layers.ts  layout.ts
