[package]
name    = "affini-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "affini"
path = "src/main.rs"

[dependencies]
affini-core = { path = "../affini-core" }
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }

clap  = { version = "4", features = ["derive"] }
axum  = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tempfile = "3"
